--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -23,7 +23,7 @@
               aria-controls="navbarNav"      aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse d-flex justify-content-end align-items-center" id="navbarNav">
+            <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link active text-light" aria-current="page" href="../inicio.html">Inicio</a>
