agregado de pages 1 4 5

--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -45,9 +45,9 @@
         </div>
     </nav>
 
-    <footer>
+    <footer class="bg-dark">
         <div>
-            <h5>Buscanos en nuestras redes y siguenos para estar al tanto de todo y del contenido nuevo</h3>
+            <h6 class="text-light">Buscanos en nuestras redes y siguenos para estar al tanto de todo y del contenido nuevo</h6>
         </div>
     
         <div>
