--- a/inicio.html
+++ b/inicio.html
@@ -54,11 +54,11 @@
     </nav>
 
     <header>
-        <h1>Anteiku Coffee</h1>
+        <h1 class="d-flex justify-content-center">Anteiku Coffee</h1>
     </header>
 
-    <main>
-        <section>
+    <main class="main-inicio">
+        <section class="d-flex inicio i-2 ">
             <p>
                 Anteiku es una cafeteria, la cual esta basada en justamente la cafeteria del manga y la serie de anime Tokyo Ghoul, por eso todo  nuestro local esta basado en bvase a la serie y decorado como tal. <br>
 
@@ -66,14 +66,14 @@
                 
                 En el anime Anteiku es una organización Ghoul pacifista que tiene una coartada como una cafetería, con servicio tanto a Ghouls como a humanos. Lo único que venden es café, puesto a que es uno de los únicos alimentos que los ghouls pueden consumir de igual manera que los humanos. Además, allí todos los trabajadores son Ghouls, y a cambio de su trabajo en la cafetería se les da carne humana de personas víctimas de suicidio. <br>
 
-                Si estas interesado en ver el anime ve aqui <a href="https://ww3.animeflv.cc/anime/tokyo-ghoul" target="_blank">Tokyo Ghoul</a>
+                Si estas interesado en ver el anime para entender mucho de la cafeteria ve aqui <a href="https://ww3.animeflv.cc/anime/tokyo-ghoul" type="button" class="btn btn-outline-dark"> Tokyo Ghoul</a>
             </p>
-            
-            <img src="" alt="">
+
+            <img src="https://dummyimage.com/200x300/000/fff" alt="">
         </section>
 
-        <section>
-            <img src="" alt="">
+        <section class="d-flex inicio i-3 ">
+            <img src="https://dummyimage.com/200x300/000/fff" alt="">
 
             <p>
                 Anteiku en realidad es todo el edificio, siendo que en la planta baja se encuentra la cafeteria y una escalera que da hacía el tercer piso, en donde está la tienda de ropa y productos relacionados con Tokyo Ghoul. <br>
