--- a/pages/productos.html
+++ b/pages/productos.html
@@ -45,6 +45,15 @@
         </div>
     </nav>
 
+    <header class=" d-flex flex-column text-center">
+        <h1>Productos</h1>
+        <h2>Nuestro Menu</h2>
+    </header>
+
+    <main>
+        
+    </main>
+
     <footer class="bg-dark">
         <div>
             <h6 class="text-light">Buscanos en nuestras redes y siguenos para estar al tanto de todo y del contenido nuevo</h6>
