--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -102,7 +102,8 @@
 
     <footer class="bg-dark">
         <div>
-            <h6 class="text-light">Buscanos en nuestras redes y siguenos para estar al tanto de todo y del contenido nuevo</h6>
+            <p class="text-light">© Copyright 2022 - Martin Mariño <br>
+                Todos los derechos reservados.</p>
         </div>
     
         <div>
