agregado de p-productos y retoques finales

--- a/inicio.html
+++ b/inicio.html
@@ -69,11 +69,11 @@
                 Si estas interesado en ver el anime para entender mucho de la cafeteria ve aqui <a target="_blank" href="https://ww3.animeflv.cc/anime/tokyo-ghoul" type="button" class="btn btn-outline-dark"> Tokyo Ghoul</a>
             </p>
 
-            <img src="https://dummyimage.com/200x300/000/fff" alt="">
+            <img  src="imagenes/kaneki-tomando-cafe.jpg" alt="" width="200" height="300">
         </section>
 
         <section class="d-flex inicio i-3 ">
-            <img src="https://dummyimage.com/200x300/000/fff" alt="">
+            <img src="imagenes/touka.opdownload" alt="" width="200" height="300">
 
             <p>
                 Anteiku en realidad es todo el edificio, siendo que en la planta baja se encuentra la cafeteria y una escalera que da hacía el tercer piso, en donde está la tienda de ropa y productos relacionados con Tokyo Ghoul. <br>
@@ -81,7 +81,7 @@
             </p>
         </section>
     </main>
-    
+
     <footer  class="bg-dark">
         <div>
            <p class="text-light">© Copyright 2022 - Martin Mariño <br>
